9bad83f chore(translations): sync Vietnamese translations from transifex (v32)

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -1,26 +1,26 @@
 about=Acerca de
-add_legend=A\u00F1adir leyenda
-add_new=A\u00F1adir
-address=Direcci\u00F3n
-add_to_dashboard=A\u00F1adir al cuadro de mandos
-aggregation_type=Tipo de agregaci\u00F3n
+add_legend=Añadir leyenda
+add_new=Agregar nuevo
+address=Dirección
+add_to_dashboard=Añadir al tablero
+aggregation_type=Tipo de agregación
 allow_external_access=Permitir acceso externo
 and_or_lower_than=Y/o menor que
 attribution=Atribucio\u0301n
-automatic=Autom\u00E1tico
+automatic=Automático
 average=Promedio
 bimonthly=Bimestral
-boundary_layer=Capa de l\u00EDmites
+boundary_layer=Capa de límites
 by_data_element=Por elemento de datos
 cancel=Cancelar
-can_edit_and_view=Ver y editar
-can_view=Ver
-chart=Gr\u00E1fico
-classes_method=Clases / m\u00E9todo
+can_edit_and_view=Puede editar y ver
+can_view=Puede ver
+chart=Grafico
+classes_method=Clases / método
 clear=Limpiar
 clear_map=Borrar mapa
 clustering=Clustering
-code=C\u00F3digo
+code=Código
 color_scale=Escala de color
 coordinate_field=Coordinate field
 coordinates=Coordenadas
@@ -31,11 +31,11 @@ created_by=Creado por
 current_legends=Leyendas actuales
 daily=Diario
 data=Datos
-data_and_periods=Datos y per\u00EDodos
+data_and_periods=Datos y períodos
 dataelement=Elemento de datos
-dataelement_group=Grupo de elementos de datos
-dataset=Set de datos
-delete=Eliminar
+dataelement_group=Grupo de elemento de datos
+dataset=Set de Datos
+delete=Borrar
 delete_favorite=Eliminar favorito
 details=Detalles
 download=Descargar
@@ -50,7 +50,7 @@ edit_layer=Editar capa
 edit_legend=Editar leyenda
 email=Correo-e
 end_date=Fecha final
-end_value_should_be_bigger_than_start_value=El valor de finalizaci\u00F3n debe ser mayor que el valor de comienzo
+end_value_should_be_bigger_than_start_value=El valor de finalización debe ser mayor que el valor de comienzo
 equal_counts=Cuentas iguales
 equal_intervals=Intervalos iguales
 event_data_item=Event data item
@@ -61,55 +61,55 @@ event_time=Event time
 external_layer=Capa externa
 external_layer_legend=Leyenda de capa externa
 facility_layer=Capa de establecimiento
-facility_layer_export_currently_not_supported=Exportar la capa de establecimientos no est\u00E1 soportado actualmente
+facility_layer_export_currently_not_supported=Exportar la capa de establecimientos no está soportado actualmente
 facility_layer_legend=Leyenda de capa de establecimientos
 favorite_name=Nombre favorito
-favorite_outdated_create_new=El favorito est\u00E1 obsoleto - por favor, cree uno nuevo
+favorite_outdated_create_new=El favorito está obsoleto - por favor, cree uno nuevo
 favorites=Favoritos
-filter=Filtro
+filter=filtro
 filter_by_value=Filtrar por valor
-financial_april=A\u00F1o fiscal - Abril
-financial_july=A\u00F1o fiscal - Julio
-financial_oct=A\u00F1o fiscal - Octubre
-google_hybrid=Google H\u00EDbrido
+financial_april=Año fiscal - Abril
+financial_july=Año fiscal - Julio
+financial_oct=Año fiscal - Octubre
+google_hybrid=Google Híbrido
 google_streets=Google Calles
-go_to_charts=Ir a gr\u00E1ficos
-go_to_pivot_tables=Ir a tablas din\u00E1micas
+go_to_charts=Ir a gráficos
+go_to_pivot_tables=Ir a tablas dinámicas
 greater_than=Mayor que
-group=Group
+group=Grupo
 group_nearby_events=Group nearby events
 groups=Grupos
 groupset=Set de grupos
 has_no_orgunits=no tiene unidades organizativas
-high_color_size=Color / tama\u00F1o m\u00E1ximo
+high_color_size=Color / tamaño máximo
 highlight_color=Color de realce
-high_size=Tama\u00F1o grande
+high_size=Tamaño grande
 home=Inicio
-indicator=Indicador
+indicator=Indicadores
 indicator_group=Grupo de indicadores
-information=Informaci\u00F3n
+information=Información
 infrastructural_data=Datos de infraestructura
-invalid_parameter=Par\u00E1metro no v\u00E1lido
+invalid_parameter=Parámetro no válido
 item_type=Item type
 landcover=Cubierta de tierra
-last_2_sixmonths=\u00DAltimos 2 semestres
-last_3_months=\u00DAltimos 3 meses
-last_4_quarters=Los \u00FAltimos 4 trimestres
-last_4_weeks=\u00DAltimas 4 semanas
-last_5_financial_years=\u00DAltimos 5 a\u00F1os financieros
-last_6_bimonths=\u00DAltimos 6 bimestres
-last_6_months=\u00DAltimos 6 meses
-last_12_months=\u00DAltimos 12 meses
-last_12_weeks=\u00DAltimas 12 semanas
-last_52_weeks=\u00DAltimas 52 semanas
+last_2_sixmonths=Últimos 2 semestres
+last_3_months=Últimos 3 meses
+last_4_quarters=Últimos 4 trimestres
+last_4_weeks=Últimas 4 semanas
+last_5_financial_years=Últimos 5 ejercicios financieros
+last_6_bimonths=Últimos 6 bimestres
+last_6_months=Últimos 6 meses
+last_12_months=Ultimos 12 meses
+last_12_weeks=Últimas 12 semanas
+last_52_weeks=Últimas 52 semanas
 last_bimonth=Bimestre anterior
-last_financial_year=A\u00F1o fiscal anterior
+last_financial_year=Último ejercicio financiero
 last_month=Mes anterior
 last_quarter=El trimestre pasado
-last_sixmonth=Semestre anterior
-last_week=Semana anterior
-last_5_years=\u00DAltimos 5 a\u00F1os
-last_year=A\u00F1o anterior
+last_sixmonth=Último semestre
+last_week=Última semana
+last_5_years=Últimos 5 años
+last_year=El año pasado
 latitude=Latitud
 layer=Capa
 layers=Capas
@@ -117,7 +117,7 @@ layer_stack_transparency=Transparencia
 legend_name=Nombre de leyenda
 legend_name_is_required=Nombre de leyenda requerido
 legends=Leyendas
-legendset=Set de leyendas
+legendset=Legend set
 legend_sets_available=set de leyendas disponible
 legend_set_name=Nombre de Set de Leyenda
 legendsets=Sets de Leyendas
@@ -125,17 +125,17 @@ legend_symbolizer=Simbolizador
 legend_type=Tipo de leyenda
 level=Nivel
 longitude=Longitud
-low_color_size=Color / tama\u00F1o m\u00EDnimo
-low_size=Tama\u00F1o peque\u00F1o
+low_color_size=Color / tamaño mínimo
+low_size=Tamaño pequeño
 manage_favorites=Administrar favoritos
 map=Mapa
-max=M\u00E1x
-min=M\u00EDn
-min_max_c=Min/max \u00C2\u00B0C
-min_max_elevation=Min/max elevaci\u00F3n
+max=Máx
+min=Mín
+min_max_c=Min/max Â°C
+min_max_elevation=Min/max elevación
 min_max_people=Min/max personas
 min_max_rainfall=Min/max lluvia
-min_max_value=Min/M\u00E1x valor
+min_max_value=Min/Máx valor
 monthly=Mensual
 name=Nombre
 next=Siguiente
@@ -149,55 +149,55 @@ no_organisation_unit_levels=Sin niveles para la unidad organizativa
 no_organisation_units_specified=No se especificaron unidades organizativas
 no_period_selected=No hay periodo seleccionado
 no_program_stage_selected=Ninguna etapa del programa seleccionada
-no_selected_items=No hay \u00EDtem seleccionados
-no_system_info_found=No se encontr\u00F3 informaci\u00F3n del sistema
-no_valid_coordinates_found=No se han encontrado coordenadas v\u00E1lidas
-open_last_chart=Abrir \u00FAltimo gr\u00E1fico
-open_last_table=Abrir \u00FAltima tabla
+no_selected_items=No hay ítem seleccionados
+no_system_info_found=No se encontró información del sistema
+no_valid_coordinates_found=No se han encontrado coordenadas válidas
+open_last_chart=Abrir último gráfico
+open_last_table=Abrir última tabla
 openstreetmap=Mapa abierto (OSM)
-open_this_map_as_chart=Abrir este mapa como una gr\u00E1fica
+open_this_map_as_chart=Abrir este mapa como una gráfica
 open_this_map_as_table=Abrir este mapa como una tabla
 options=Opciones
 organisation_unit=Unidad organizativa
 organisation_unit_group_icons=Iconos del grupo de unidad organizativa
-organisationunit_groupset=Mostrar set de grupos de unidad organizativa
-organisation_units=Unidades organizativas
+organisationunit_groupset=Organisation unit group set
+organisation_units=Unidades orgenizativas
 organisationunit_search=Buscar unidad organizativa
 osm_light=OSM Sencillo
 overwrite=Sobrescribir
 overwrite_favorite=Sobrescribir favorito
-page=P\u00E1gina
+page=Página
 parent_unit=Unidad padre
 period=Periodo
 period_type=Tipo de periodo
-phone_number=N\u00FAmero de tel\u00E9fono
-placement=Posici\u00F3n
+phone_number=Número de teléfono
+placement=Posición
 please_create_map_first=Por favor, cree un mapa primero
-please_enter_a_name=Por favor, introduzca un nombre
-please_enter_map_title=Por favor, introduzca el t\u00EDtulo del mapa
+please_enter_a_name=Entrar un nombre
+please_enter_map_title=Por favor, introduzca el título del mapa
 point_color=Point color
 point_radius=Point radius
-population_density=Densidad de poblaci\u00F3n
-precipitation=Precipitaci\u00F3n
+population_density=Densidad de población
+precipitation=Precipitación
 predefined=Predefinido
-previous=Previous
+previous=Anterior
 program=Program
 program_indicators=Indicadores de programa
-public_access=Acceso p\u00FAblico
+public_access=Acceso público
 quarterly=Trimestral
 relative=Relativo
 relocate=Reubicar
 relocate_facility=Reubicar establecimiento
-remove=Borrar
+remove=Eliminar
 rename=Renombrar
 reporting_rates=Tasas de Informes
-revision=Revisi\u00F3n
+revision=Revisión
 search=Buscar
 search_for_favorites=Buscar favoritos
-search_for_user_groups=Buscar grupos de usuario
+search_for_user_groups=Buscar grupos de usuarios
 select=Seleccionar
 select_groups=Seleccionar grupos
-selection_mode=Modo de selecci\u00F3n
+selection_mode=Modo de selección
 select_dataset=Seleccionar set de datos
 select_layer=Seleccionar capa
 select_layer_from_google_earth_engine=Seleccionar la capa de Google Earth Engine
@@ -205,19 +205,19 @@ select_levels=Seleccionar niveles
 select_organisation_unit_groups=Seleccionar grupos de unidad organizativa
 select_organisation_unit_levels=Seleccionar niveles de unidad organizativa
 select_organisation_units=Seleccionar unidades organizativas
-select_period=Seleccionar per\u00EDodo
+select_period=Seleccione un periodo
 select_program=Seleccionar programa
 select_service=Seleccionar servicio
 select_stage=Seleccionar fase
 select_sub_units=Seleccionar sub-unidades
-select_year=Seleccionar a\u00F1o
+select_year=Seleccionar año
 service_url=Servicio URL
 share=Compartir
 share_with_other_people=Compartir con otros
-sharing_settings=Ajustes de compartici\u00F3n
+sharing_settings=Configuración de uso compartido
 show=Mostrar
-show_circular_area=Mostrar \u00E1rea circular de radio (m)
-show_information_sheet=Mostrar hoja de informaci\u00F3n
+show_circular_area=Mostrar área circular de radio (m)
+show_information_sheet=Mostrar hoja de información
 show_lon_lat=Mostrar longitud/latitud
 sixmonthly=Semestral
 sixmonthly_april=Semestral Abril
@@ -225,47 +225,53 @@ stage=Fase
 start_date=Fecha inicial
 start_end_dates=Fechas de inicio y fin
 start_end_value=Valor Inicial/Final
-stddev=Desviaci\u00F3n est\u00E1ndar
+stddev=Desviación estándar
 steps=Pasos
-style=Style
+style=Estilo
 sub_units=Sub-unidades
 sub_x2_units=Sub-unidades-x2
 sum=Suma
 swap_lon_lat=Intercambiar longitud/latitud
-symbol_layer=Capa de establecimientos
+symbol_layer=Capa de establecimiento
 table=Tabla
 temperature=Temperatura
 text_filter=Filtro de texto
-thematic_layer=Capa tem\u00E1tica
-thematic_layer_1_legend=Leyenda de capa tem\u00E1tica 1
-thematic_layer_2_legend=Leyenda de capa tem\u00E1tica 2
-thematic_layer_3_legend=Leyenda de capa tem\u00E1tica 3
-thematic_layer_4_legend=Leyenda de capa tem\u00E1tica 4
+thematic_layer=Capa temática
+thematic_layer_1_legend=Leyenda de capa temática 1
+thematic_layer_2_legend=Leyenda de capa temática 2
+thematic_layer_3_legend=Leyenda de capa temática 3
+thematic_layer_4_legend=Leyenda de capa temática 4
 this_bimonth=Este bimestre
-this_financial_year=Este a\u00F1o fiscal
+this_financial_year=Este año fiscal
 this_month=Este mes
 this_quarter=Este trimestre
 this_sixmonth=Este semestre
 this_week=Esta semana
-this_year=Este a\u00F1o
-time_since_last_data_update=Tiempo desde \u00FAltima actualizaci\u00F3n
+this_year=Este año
+time_since_last_data_update=Tiempo desde última actualización
+today=Hoy
 totals=Totales
 update=Actualizar
 username=Nombre de usuario
-user_is_not_assigned_to_any_organisation_units=El usuario no est\u00E1 asignado a ninguna de las unidades organizativas
+user_is_not_assigned_to_any_organisation_units=El usuario no está asignado a ninguna de las unidades organizativas
 user_organisation_unit=Usuario de unidad organizativa
 user_ou=Usuario OU
 user_sub_units=Subunidades de usuario
 user_sub_x2_units=Sub-unidades-x2 de usuario
 value=Valor
-value_type=Tipo de valor
+value_type=Tipo de Valor
 variance=Varianza
-version=Versi\u00F3n
+version=Versión
 weekly=Semanal
-write_interpretation=Escribir interpretaci\u00F3n
-write_your_interpretation=Escriba su intepretaci\u00F3n
+weekly_wednesday=Weekly (Start Wednesday)
+weekly_thursday=Weekly (Start Thursday)
+weekly_saturday=Weekly (Start Saturday)
+weekly_sunday=Weekly (Start Sunday)
+write_interpretation=Escribir interpretación
+write_your_interpretation=Escriba su intepretación
 yearly=Anual
-yes=S\u00ED
+yes=Si
+yesterday=Ayer
 you_can_not_select_organisation_units_below_the_selected_level=No puedes seleccionar unidades organizativas por debajo del nivel seleccionado
 you_do_not_have_access_to_all_items_in_this_favorite=No tienes acceso a todos los elementos en este favorito
 
