--- a/i18n/i18n_app_ur.properties
+++ b/i18n/i18n_app_ur.properties
@@ -1,7 +1,7 @@
-about=\u06a9\u06d2 \u0628\u0627\u0631\u06d2 \u0645\u06cc\u06ba
+about=\u0645\u062a\u0639\u0644\u0642
 add_legend=\u0639\u0644\u0627\u0645\u0627\u062a \u0634\u0627\u0645\u0644 \u06a9\u0631\u06cc\u06ba
-add_new=\u0646\u06cc\u0627 \u0634\u0627\u0645\u0644 \u06a9\u0631\u06cc\u06ba
-address=\u0627\u06cc\u0688\u0631\u06cc\u0633
+add_new=\u0646\u06cc\u0627 \u0634\u0627\u0645\u0644
+address=\u067e\u062a\u0627
 add_to_dashboard=\u0688\u06cc\u0634 \u0628\u0648\u0631\u0688 \u0645\u06cc\u06ba \u0634\u0627\u0645\u0644 \u06a9\u0631\u06cc\u06ba
 aggregation_type=\u0645\u062c\u0645\u0648\u0639\u06cc \u0642\u0633\u0645
 allow_external_access=\u0628\u06cc\u0631\u0648\u0646\u06cc \u0631\u0633\u0627\u0626\u06cc \u06a9\u06cc \u0627\u062c\u0627\u0632\u062a \u062f\u06cc\u06ba
@@ -9,15 +9,15 @@ and_or_lower_than=\u0627\u0648\u0631 / \u06cc\u0627 \u06a9\u0645 \u0633\u06d2 \u
 attribution=\u0627\u0646\u062a\u0628\u0627\u06c1
 automatic=\u062e\u0648\u062f \u06a9\u0627\u0631 \u0637\u0631\u06cc\u0642\u06d2 \u0633\u06d2
 average=\u0627\u0648\u0633\u0637
-bimonthly=\u062f\u0648 \u0645\u0627\u06c1\u0627\u0646\u06c1
+bimonthly=\u062f\u0648 \u0645\u0627\u06c1\u06cc
 boundary_layer=\u062d\u062f \u067e\u0631\u062a
 by_data_element=\u0688\u06cc\u0679\u0627 \u0639\u0646\u0635\u0631 \u06a9\u06d2 \u0630\u0631\u06cc\u0639\u06c1
-cancel=\u0645\u0646\u0633\u0648\u062e \u06a9\u0631\u06cc\u06ba
-can_edit_and_view=\u062a\u0631\u0645\u06cc\u0645 \u0627\u0648\u0631 \u062f\u06cc\u06a9\u06be \u0633\u06a9\u062a\u06d2 \u06c1\u06cc\u06ba
-can_view=\u062f\u06cc\u06a9\u06be \u0633\u06a9\u062a\u06d2 \u06c1\u06cc\u06ba
+cancel=\u0645\u0646\u0633\u0648\u062e
+can_edit_and_view=\u0627\u06cc\u0688\u06cc\u0679 \u0627\u0648\u0631 \u0648\u06cc\u0648 \u06a9\u06cc \u0631\u0633\u0627\u0631\u0626\u06cc
+can_view=\u0635\u0631\u0641 \u0648\u06cc\u0648
 chart=\u0686\u0627\u0631\u0679
 classes_method=\u06a9\u0644\u0627\u0633 / \u0637\u0631\u06cc\u0642\u06c1
-clear=\u0648\u0627\u0636\u062d \u06a9\u0631\u06cc\u06ba
+clear=\u06a9\u0644\u06cc\u0626\u0631
 clear_map=\u0648\u0627\u0636\u062d \u0646\u0642\u0634\u06c1
 clustering=\u06a9\u0644\u0633\u0679\u0631\u0646\u06af
 code=\u06a9\u0648\u0688
@@ -26,16 +26,16 @@ coordinate_field=\u0633\u0645\u0627\u062c \u0641\u06cc\u0644\u0688
 coordinates=\u0633\u0645\u0627\u062c
 coordinates_could_not_be_loaded=\u0633\u0645\u062a\u0648\u06ba \u06a9\u0648 \u0644\u0648\u0688 \u0646\u06c1\u06cc\u06ba \u06a9\u06cc\u0627 \u062c\u0627 \u0633\u06a9\u0627
 count=\u0634\u0645\u0627\u0631
-create=\u0628\u0646\u0627\u0646\u0627
-created_by=\u0628\u0646\u0627\u0626\u06cc \u06af\u0626\u06cc
+create=\u062a\u062e\u0644\u06cc\u0642
+created_by=\u062a\u062e\u0644\u06cc\u0642 \u06a9\u06cc\u0627
 current_legends=\u0645\u0648\u062c\u0648\u062f\u06c1 \u06a9\u0646\u0648\u062f\u0646\u062a\u06cc\u0648\u06ba
 daily=\u0631\u0648\u0632\u0627\u0646\u06c1
 data=\u0688\u06cc\u0679\u0627
 data_and_periods=\u0688\u06cc\u0679\u0627 \u0627\u0648\u0631 \u062f\u0648\u0631
 dataelement=\u0688\u06cc\u0679\u0627 \u0639\u0646\u0635\u0631
-dataelement_group=\u0688\u06cc\u0679\u0627 \u0639\u0646\u0635\u0631 \u06af\u0631\u0648\u067e
+dataelement_group=\u0688\u06cc\u0679\u0627 \u0639\u0646\u0627\u0635\u0631 \u06af\u0631\u0648\u067e
 dataset=\u0688\u06cc\u0679\u0627 \u0633\u06cc\u0679
-delete=\u062d\u0630\u0641 \u06a9\u0631\u06cc\u06ba
+delete=\u062d\u0630\u0641
 delete_favorite=\u067e\u0633\u0646\u062f\u06cc\u062f\u06c1 \u062d\u0630\u0641 \u06a9\u0631\u06cc\u06ba
 details=\u062a\u0641\u0635\u06cc\u0644\u0627\u062a
 download=\u0688\u0627\u0624\u0646 \u0644\u0648\u0688 \u06a9\u0631\u06cc\u06ba
@@ -49,7 +49,7 @@ elevation=\u0627\u0648\u0646\u0686\u0627\u0626\u06cc
 edit_layer=\u062a\u0631\u0645\u06cc\u0645 \u067e\u0631\u062a
 edit_legend=\u0627\u0641\u0633\u0627\u0646\u0648\u06cc \u062a\u0631\u0645\u06cc\u0645 \u06a9\u0631\u06cc\u06ba
 email=\u0627\u06cc \u0645\u06cc\u0644
-end_date=\u0622\u062e\u0631\u06cc \u062a\u0627\u0631\u06cc\u062e
+end_date=\u0627\u0653\u062e\u0631\u06cc \u062a\u0627\u0631\u06cc\u062e
 end_value_should_be_bigger_than_start_value=\u0627\u062e\u062a\u062a\u0627\u0645\u06cc \u0642\u06cc\u0645\u062a \u0634\u0631\u0648\u0639 \u0642\u06cc\u0645\u062a \u0633\u06d2 \u0628\u0691\u0627 \u06c1\u0648\u0646\u0627 \u0686\u0627\u06c1\u0626\u06d2
 equal_counts=\u0645\u0633\u0627\u0648\u0627\u062a
 equal_intervals=\u0628\u0631\u0627\u0628\u0631 \u0648\u0642\u0641\u06d2
@@ -75,7 +75,7 @@ google_hybrid=\u06af\u0648\u06af\u0644 \u06c1\u0627\u0626\u0628\u0631\u0688
 google_streets=Google Streets
 go_to_charts=\u0686\u0627\u0631\u0679\u0633 \u067e\u0631 \u062c\u0627\u0626\u06cc\u06ba
 go_to_pivot_tables=\u067e\u06cc\u0648\u0679 \u0645\u06cc\u0632\u06cc\u06ba \u067e\u0631 \u062c\u0627\u0626\u06cc\u06ba
-greater_than=\u0627\u0633 \u0633\u06d2 \u0628\u0691\u0627
+greater_than=\u0628\u0691\u0627
 group=\u06af\u0631\u0648\u067e
 group_nearby_events=\u0642\u0631\u06cc\u0628\u06cc \u0648\u0627\u0642\u0639\u0627\u062a \u06a9\u0627 \u06af\u0631\u0648\u06c1
 groups=\u06af\u0631\u0648\u067e
@@ -86,30 +86,30 @@ highlight_color=\u0631\u0646\u06af \u06a9\u0648 \u0646\u0645\u0627\u06cc\u0627\u
 high_size=\u0627\u0639\u0644\u06cc \u0633\u0627\u0626\u0632
 home=\u06af\u06be\u0631
 indicator=\u0627\u0634\u0627\u0631\u06d2
-indicator_group=\u0627\u0634\u0627\u0631\u06d2 \u06af\u0631\u0648\u067e
+indicator_group=\u0627\u0634\u0627\u0631\u0648\u06ba \u06a9\u0627 \u06af\u0631\u0648\u067e
 information=\u0645\u0639\u0644\u0648\u0645\u0627\u062a
 infrastructural_data=\u0628\u0646\u06cc\u0627\u062f\u06cc \u0688\u06be\u0627\u0646\u0686\u06d2
 invalid_parameter=\u063a\u0644\u0637 \u067e\u06cc\u0631\u0627\u0645\u06cc\u0679\u0631
 item_type=\u0686\u06cc\u0632 \u06a9\u06cc \u0642\u0633\u0645
 landcover=Landcover
-last_2_sixmonths=\u0622\u062e\u0631\u06cc 2 \u0686\u06be \u0645\u0627\u06c1
-last_3_months=\u0622\u062e\u0631\u06cc 3 \u0645\u0627\u06c1
-last_4_quarters=\u0622\u062e\u0631\u06cc \u0686\u0627\u0631 \u0686\u0648\u062a\u06be\u0627\u0626\u06cc
-last_4_weeks=\u0622\u062e\u0631\u06cc 4 \u06c1\u0641\u062a\u0648\u06ba
-last_5_financial_years=\u0622\u062e\u0631\u06cc 5 \u0645\u0627\u0644\u06cc \u0633\u0627\u0644
-last_6_bimonths=\u0622\u062e\u0631\u06cc 6 \u062f\u0648 \u0645\u0627\u06c1
-last_6_months=\u0622\u062e\u0631\u06cc 6 \u0645\u0627\u06c1
-last_12_months=\u0622\u062e\u0631\u06cc 12 \u0645\u0627\u06c1
-last_12_weeks=\u0622\u062e\u0631\u06cc 12 \u06c1\u0641\u062a\u0648\u06ba
-last_52_weeks=\u0622\u062e\u0631\u06cc 52 \u06c1\u0641\u062a\u0648\u06ba
-last_bimonth=\u0622\u062e\u0631\u06cc \u062f\u0648 \u0645\u0627\u06c1
-last_financial_year=\u0622\u062e\u0631\u06cc \u0645\u0627\u0644\u06cc \u0633\u0627\u0644
-last_month=\u067e\u0686\u06be\u0644\u06d2 \u0645\u06c1\u06cc\u0646\u06d2
-last_quarter=\u0622\u062e\u0631\u06cc \u0686\u0648\u062a\u06be\u0627\u0626\u06cc
-last_sixmonth=\u0622\u062e\u0631\u06cc \u0686\u06be \u0645\u0627\u06c1
-last_week=\u067e\u0686\u06be\u0644\u0627 \u06c1\u0641\u062a\u06c1
-last_5_years=\u0622\u062e\u0631\u06cc 5 \u0633\u0627\u0644
-last_year=\u0622\u062e\u0631\u06cc \u0633\u0627\u0644
+last_2_sixmonths=\u0627\u0653\u062e\u0631\u06cc \u06f2 \u0686\u06be \u0645\u0627\u06c1
+last_3_months=\u0627\u0653\u062e\u0631\u06cc \u06f3 \u0645\u0627\u06c1
+last_4_quarters=\u0627\u0653\u062e\u0631\u06cc \u06f4 \u0633\u06c1 \u0645\u0627\u06c1\u06cc
+last_4_weeks=\u0627\u0653\u062e\u0631\u06cc \u06f4 \u06c1\u0641\u062a\u06d2
+last_5_financial_years=\u0627\u0653\u062e\u0631\u06cc \u06f5 \u0645\u0627\u0644\u06cc\u0627\u062a\u06cc \u0633\u0627\u0644
+last_6_bimonths=\u0627\u0653\u062e\u0631\u06cc \u06f6 \u062f\u0648 \u0645\u0627\u06c1\u0627\u0646\u06c1
+last_6_months=\u0627\u0653\u062e\u0631\u06cc \u06f6 \u0645\u0627\u06c1
+last_12_months=\u0627\u0653\u062e\u0631\u06cc \u06f1\u06f2 \u0645\u0627\u06c1
+last_12_weeks=\u0627\u0653\u062e\u0631\u06cc \u06f1\u06f2 \u06c1\u0641\u062a\u06d2
+last_52_weeks=\u0627\u0653\u062e\u0631\u06cc \u06f5\u06f2 \u06c1\u0641\u062a\u06d2
+last_bimonth=\u0627\u0653\u062e\u0631\u06cc \u062f\u0648 \u0645\u0627\u06c1
+last_financial_year=\u0627\u0653\u062e\u0631\u06cc \u0645\u0627\u0644\u06cc\u0627\u062a\u06cc \u0633\u0627\u0644
+last_month=\u0627\u0653\u062e\u0631\u06cc \u0645\u0627\u06c1
+last_quarter=\u0627\u0653\u062e\u0631\u06cc \u0633\u06c1 \u0645\u0627\u06c1
+last_sixmonth=\u0627\u0653\u062e\u0631\u06cc \u06f6 \u0645\u0627\u06c1
+last_week=\u0627\u0653\u062e\u0631\u06cc \u06c1\u0641\u062a\u06c1
+last_5_years=\u0627\u0653\u062e\u0631\u06cc \u06f5 \u0633\u0627\u0644
+last_year=\u0627\u0653\u062e\u0631\u06cc \u0633\u0627\u0644
 latitude=\u0637\u0648\u0644
 layer=\u067e\u0631\u062a
 layers=\u062a\u06c1\u0648\u06ba
@@ -130,20 +130,20 @@ low_size=\u06a9\u0645 \u0633\u0627\u0626\u0632
 manage_favorites=\u067e\u0633\u0646\u062f\u06cc\u062f\u06c1 \u06a9\u0627 \u0646\u0638\u0645 \u06a9\u0631\u06cc\u06ba
 map=\u0646\u0642\u0634\u06c1
 max=\u0632\u06cc\u0627\u062f\u06c1 \u0633\u06d2 \u0632\u06cc\u0627\u062f\u06c1
-min=\u0645\u0646\u0679
-min_max_c=\u0645\u0627\u0626\u0646 / \u0632\u06cc\u0627\u062f\u06c1 \u0633\u06d2 \u0632\u06cc\u0627\u062f\u06c1 \u00b0 C
+min=\u06a9\u0645 \u0633\u06d2 \u06a9\u0645
+min_max_c=\u0645\u0627\u0626\u0646 / \u0632\u06cc\u0627\u062f\u06c1 \u0633\u06d2 \u0632\u06cc\u0627\u062f\u06c1 ° C
 min_max_elevation=\u0645\u0627\u0626\u0646 / \u0632\u06cc\u0627\u062f\u06c1 \u0633\u06d2 \u0632\u06cc\u0627\u062f\u06c1 \u0628\u0644\u0646\u062f\u06cc
 min_max_people=\u0645\u0627\u0626\u0646 / \u0632\u06cc\u0627\u062f\u06c1 \u0633\u06d2 \u0632\u06cc\u0627\u062f\u06c1 \u0627\u0641\u0631\u0627\u062f
 min_max_rainfall=\u0645\u0627\u0626\u0646 / \u0632\u06cc\u0627\u062f\u06c1 \u0633\u06d2 \u0632\u06cc\u0627\u062f\u06c1 \u0628\u0627\u0631\u0634
 min_max_value=\u0645\u0627\u0626\u0646 / \u0632\u06cc\u0627\u062f\u06c1 \u0633\u06d2 \u0632\u06cc\u0627\u062f\u06c1 \u0642\u06cc\u0645\u062a
 monthly=\u0645\u0627\u06c1\u0627\u0646\u06c1
 name=\u0646\u0627\u0645
-next=\u0627\u06af\u0644\u06d2
+next=\u0627\u06af\u0644\u06c1
 nighttime_lights=\u0631\u0627\u062a \u06a9\u06d2 \u0648\u0642\u062a \u06a9\u06cc \u0631\u0648\u0634\u0646\u06cc
 no=\u0646\u06c1\u06cc\u06ba
 no_groupset_selected=\u06a9\u0648\u0626\u06cc \u06af\u0631\u0648\u067e \u0645\u0646\u062a\u062e\u0628 \u0646\u06c1\u06cc\u06ba \u06a9\u06cc\u0627 \u06af\u06cc\u0627
 no_map_to_save=\u0628\u0686\u0627\u0646\u06d2 \u06a9\u06d2 \u0644\u0626\u06d2 \u06a9\u0648\u0626\u06cc \u0646\u0642\u0634\u06c1 \u0646\u06c1\u06cc\u06ba
-none=\u06a9\u0648\u0626\u06cc \u0628\u06be\u06cc \u0646\u06c1\u06cc\u06ba
+none=\u06a9\u0648\u0626\u06cc \u0646\u06c1\u06ba
 no_event_coordinates_found=\u06a9\u0648\u0626\u06cc \u0627\u06cc\u0648\u0646\u0679 \u06a9\u06d2 \u062a\u0639\u0627\u0648\u0646 \u0633\u06d2 \u0646\u06c1\u06cc\u06ba \u0645\u0644 \u0633\u06a9\u0627
 no_organisation_unit_levels=\u062a\u0646\u0638\u06cc\u0645 \u06cc\u0648\u0646\u0679 \u06a9\u06cc \u0633\u0637\u062d \u0646\u06c1\u06cc\u06ba
 no_organisation_units_specified=\u06a9\u0648\u0626\u06cc \u062a\u0646\u0638\u06cc\u0645 \u06cc\u0648\u0646\u0679\u0633 \u06a9\u06cc \u0648\u0636\u0627\u062d\u062a \u0646\u06c1\u06cc\u06ba
@@ -160,8 +160,8 @@ open_this_map_as_table=\u0627\u0633 \u0646\u0642\u0634\u06d2 \u06a9\u06d2 \u0637
 options=\u0627\u062e\u062a\u06cc\u0627\u0631\u0627\u062a
 organisation_unit=\u062a\u0646\u0638\u06cc\u0645 \u06cc\u0648\u0646\u0679
 organisation_unit_group_icons=\u062a\u0646\u0638\u06cc\u0645 \u06cc\u0648\u0646\u0679 \u06af\u0631\u0648\u067e \u0634\u0628\u06cc\u06c1\u06cc\u06ba
-organisationunit_groupset=\u062a\u0646\u0638\u06cc\u0645 \u06cc\u0648\u0646\u0679 \u06af\u0631\u0648\u067e \u0633\u06cc\u0679
-organisation_units=\u062a\u0646\u0638\u06cc\u0645 \u06cc\u0648\u0646\u0679\u0633
+organisationunit_groupset=\u062a\u0646\u0638\u06cc\u0645\u06cc \u06cc\u0648\u0646\u0679 \u06af\u0631\u0648\u067e \u0633\u06cc\u0679
+organisation_units=\u062a\u0646\u0638\u06cc\u0645\u06cc \u06cc\u0648\u0646\u0679\u0633
 organisationunit_search=\u062a\u0646\u0638\u06cc\u0645 \u06cc\u0648\u0646\u0679 \u062a\u0644\u0627\u0634
 osm_light=OSM \u0644\u0627\u0626\u0679
 overwrite=\u0644\u06a9\u06be\u06cc\u06ba
@@ -180,21 +180,21 @@ point_radius=\u067e\u0648\u0627\u0626\u0646\u0679 \u0631\u06cc\u0688\u06cc\u0648
 population_density=\u0622\u0628\u0627\u062f\u06cc \u06a9\u062b\u0627\u0641\u062a
 precipitation=\u0648\u0631\u0646
 predefined=\u067e\u06cc\u0634 \u0648\u0636\u0627\u062d\u062a\u06cc
-previous=\u067e\u0686\u06be\u0644\u0627
+previous=\u067e\u0686\u06be\u0644\u06c1
 program=\u067e\u0631\u0648\u06af\u0631\u0627\u0645
 program_indicators=\u067e\u0631\u0648\u06af\u0631\u0627\u0645 \u0627\u0634\u0627\u0631\u06d2
 public_access=\u0639\u0648\u0627\u0645\u06cc \u0631\u0633\u0627\u0626\u06cc
 quarterly=\u0633\u06c1 \u0645\u0627\u06c1\u06cc
-relative=\u0631\u0634\u062a\u06c1 \u062f\u0627\u0631
+relative=\u0645\u062a\u0627\u0628\u0642\u062a
 relocate=\u0631\u06c1\u0627\u0626\u0634\u06cc
 relocate_facility=\u0628\u062d\u0627\u0644\u06cc \u06a9\u06cc \u0633\u06c1\u0648\u0644\u06cc\u0627\u062a
-remove=\u062f\u0648\u0631
-rename=\u0646\u0627\u0645 \u062a\u0628\u062f\u06cc\u0644 \u06a9\u0631\u06cc\u06ba
+remove=\u062d\u0630\u0641
+rename=\u0646\u0627\u0645 \u0628\u062f\u0644\u0648
 reporting_rates=\u0631\u067e\u0648\u0631\u0679\u0646\u06af \u06a9\u06cc \u0634\u0631\u062d
 revision=\u0646\u0638\u0631 \u062b\u0627\u0646\u06cc
 search=\u062a\u0644\u0627\u0634 \u06a9\u0631\u06cc\u06ba
 search_for_favorites=\u067e\u0633\u0646\u062f\u06cc\u062f\u06c1 \u06a9\u06d2 \u0644\u0626\u06d2 \u062a\u0644\u0627\u0634 \u06a9\u0631\u06cc\u06ba
-search_for_user_groups=\u0635\u0627\u0631\u0641 \u06af\u0631\u0648\u067e\u0648\u06ba \u06a9\u06d2 \u0644\u0626\u06d2 \u062a\u0644\u0627\u0634 \u06a9\u0631\u06cc\u06ba
+search_for_user_groups=\u06cc\u0648\u0632\u0631 \u06af\u0631\u0648\u067e \u0633\u0631\u0631\u0686 \u06a9\u0631\u0648
 select=\u0645\u0646\u062a\u062e\u0628 \u06a9\u0631\u06cc\u06ba
 select_groups=\u06af\u0631\u0648\u067e \u0645\u0646\u062a\u062e\u0628 \u06a9\u0631\u06cc\u06ba
 selection_mode=\u0627\u0646\u062a\u062e\u0627\u0628 \u06a9\u06d2 \u0645\u0648\u0688
@@ -214,23 +214,23 @@ select_year=\u0633\u0627\u0644 \u06a9\u0648 \u0645\u0646\u062a\u062e\u0628 \u06a
 service_url=\u0633\u0631\u0648\u0633 \u06cc\u0648 \u0622\u0631 \u0627\u06cc\u0644
 share=\u0628\u0627\u0646\u0679\u06cc\u06ba
 share_with_other_people=\u062f\u0648\u0633\u0631\u0648\u06ba \u06a9\u06d2 \u0633\u0627\u062a\u06be \u0627\u0634\u062a\u0631\u0627\u06a9 \u06a9\u0631\u06cc\u06ba
-sharing_settings=\u0634\u06cc\u0626\u0631\u0646\u06af \u06a9\u06cc \u062a\u0631\u062a\u06cc\u0628\u0627\u062a
+sharing_settings=\u0634\u06cc\u0626\u0631 \u0633\u06cc\u0679\u0646\u06af
 show=\u062f\u06a9\u06be\u0627\u0626\u06cc\u06ba
 show_circular_area=\u0631\u06cc\u06af\u0648\u0644\u0633 (\u0627\u06cc\u0645) \u06a9\u06d2 \u0633\u0627\u062a\u06be \u0633\u0631\u06a9\u0644\u0631 \u0639\u0644\u0627\u0642\u06d2 \u062f\u06a9\u06be\u0627\u0626\u06cc\u06ba
 show_information_sheet=\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u062f\u06a9\u06be\u0627\u0626\u06cc\u06ba
 show_lon_lat=\u0637\u0648\u0644 \u0648 \u0639\u0631\u0636 / \u0637\u0648\u0644 \u0648 \u0639\u0631\u0636 \u062f\u06a9\u06be\u0627\u0626\u06cc\u06ba
-sixmonthly=\u0686\u06be \u0645\u0627\u06c1\u0627\u0646\u06c1
-sixmonthly_april=\u0686\u06be \u0645\u0627\u06c1\u0627\u0646\u06c1 \u0627\u067e\u0631\u06cc\u0644
+sixmonthly=\u0686\u06be \u0645\u0627\u06c1\u06cc
+sixmonthly_april=\u0686\u06be \u0645\u0627\u06c1\u06cc \u0627\u067e\u0631\u06cc\u0644
 stage=\u0627\u0633\u0679\u06cc\u062c
-start_date=\u0634\u0631\u0648\u0639 \u06a9\u0631\u0646\u06d2 \u06a9\u06cc \u062a\u0627\u0631\u06cc\u062e
+start_date=\u062a\u0627\u0631\u06cc\u062e \u0627\u0653\u063a\u0627\u0632
 start_end_dates=\u0634\u0631\u0648\u0639 / \u062e\u062a\u0645 \u062a\u0627\u0631\u06cc\u062e\u06cc\u06ba
 start_end_value=\u0634\u0631\u0648\u0639 / \u062e\u062a\u0645 \u0642\u06cc\u0645\u062a
 stddev=\u0645\u0639\u06cc\u0627\u0631\u06cc \u0627\u0646\u062d\u0631\u0627\u0641
 steps=\u0645\u0631\u062d\u0644\u06d2
-style=\u0627\u0646\u062f\u0627\u0632
+style=\u0633\u0679\u0627\u0626\u0644
 sub_units=\u0630\u06cc\u0644\u06cc \u06cc\u0648\u0646\u0679\u0633
 sub_x2_units=\u0630\u06cc\u0644\u06cc X2 \u06cc\u0648\u0646\u0679\u0633
-sum=\u0633\u0645
+sum=\u062c\u0645\u0639
 swap_lon_lat=\u0637\u0648\u0644 \u0648 \u0639\u0631\u0636 / \u0637\u0648\u0644 \u0648 \u0639\u0631\u0636 \u06a9\u0648 \u062a\u0628\u062f\u06cc\u0644 \u06a9\u0631\u06cc\u06ba
 symbol_layer=\u0633\u06c1\u0648\u0644\u062a \u067e\u0631\u062a
 table=\u0679\u06cc\u0628\u0644
@@ -242,7 +242,7 @@ thematic_layer_2_legend=\u062a\u06be\u06cc\u0645\u0679 \u067e\u0631\u062a 2 \u06
 thematic_layer_3_legend=\u062a\u06be\u06cc\u0645\u0679 \u067e\u0631\u062a 3 \u0639\u0644\u0627\u0645\u0627\u062a
 thematic_layer_4_legend=\u062a\u06be\u06cc\u0645\u0679 \u067e\u0631\u062a 4 \u0627\u0641\u0633\u0627\u0646\u0648\u06cc
 this_bimonth=\u06cc\u06c1 \u062f\u0648 \u0645\u0627\u06c1
-this_financial_year=\u06cc\u06c1 \u0645\u0627\u0644\u06cc \u0633\u0627\u0644
+this_financial_year=\u0627\u0633 \u0645\u0627\u0644\u06cc\u0627\u062a\u06cc \u0633\u0627\u0644
 this_month=\u0627\u0633 \u0645\u06c1\u06cc\u0646\u06d2
 this_quarter=\u0627\u0633 \u0633\u06c1 \u0645\u0627\u06c1\u06cc
 this_sixmonth=\u06cc\u06c1 \u0686\u06be \u0645\u0627\u06c1
@@ -251,15 +251,15 @@ this_year=\u0627\u0633 \u0633\u0627\u0644
 time_since_last_data_update=\u0622\u062e\u0631\u06cc \u0627\u0639\u062f\u0627\u062f \u0648 \u0634\u0645\u0627\u0631 \u06a9\u06cc \u062a\u0627\u0632\u06c1 \u06a9\u0627\u0631\u06cc \u06a9\u06d2 \u0628\u0639\u062f \u0633\u06d2 \u0622\u062e\u0631\u06cc \u0628\u0627\u0631
 today=\u0622\u062c
 totals=\u0645\u062c\u0645\u0648\u0639\u06cc \u0637\u0648\u0631 \u067e\u0631
-update=\u0627\u067e \u0688\u06cc\u0679
-username=\u0635\u0627\u0631\u0641 \u06a9\u0627 \u0646\u0627\u0645
+update=\u0627\u067e\u0688\u06cc\u0679
+username=\u06cc\u0648\u0632\u0631\u0646\u0627\u0645
 user_is_not_assigned_to_any_organisation_units=\u0635\u0627\u0631\u0641 \u06a9\u0633\u06cc \u0628\u06be\u06cc \u062a\u0646\u0638\u06cc\u0645 \u06a9\u06d2 \u06cc\u0648\u0646\u0679\u0633 \u06a9\u0648 \u062a\u0641\u0648\u06cc\u0636 \u0646\u06c1\u06cc\u06ba \u06a9\u06cc\u0627 \u062c\u0627\u062a\u0627 \u06c1\u06d2
 user_organisation_unit=\u0635\u0627\u0631\u0641 \u062a\u0646\u0638\u06cc\u0645 \u06cc\u0648\u0646\u0679
 user_ou=\u06cc\u0648\u0632\u0631 \u0627\u0648 \u06cc\u0648
 user_sub_units=\u0635\u0627\u0631\u0641 \u0630\u06cc\u0644\u06cc \u06cc\u0648\u0646\u0679\u0633
 user_sub_x2_units=\u0635\u0627\u0631\u0641 \u0630\u06cc\u0644\u06cc X2-\u06cc\u0648\u0646\u0679\u0633
 value=\u0642\u062f\u0631
-value_type=\u0642\u06cc\u0645\u062a \u06a9\u06cc \u0642\u0633\u0645
+value_type=\u0648\u06cc\u0644\u06cc\u0648 \u06a9\u06cc \u0642\u0633\u0645
 variance=\u0645\u062a\u063a\u06cc\u0631
 version=\u0648\u0631\u0698\u0646
 weekly=\u06c1\u0641\u062a\u06c1 \u0648\u0627\u0631
@@ -270,7 +270,7 @@ weekly_sunday=\u06c1\u0641\u062a\u06c1 (\u0627\u062a\u0648\u0627\u0631 \u0634\u0
 write_interpretation=\u062a\u0641\u0633\u06cc\u0631 \u0644\u06a9\u06be\u06cc\u06ba
 write_your_interpretation=\u0627\u067e\u0646\u06cc \u062a\u0639\u0628\u06cc\u0631 \u0644\u06a9\u06be\u06cc\u06ba
 yearly=\u0633\u0627\u0644\u0627\u0646\u06c1
-yes=\u062c\u06cc \u06c1\u0627\u06ba
+yes=\u06c1\u0627\u06ba
 yesterday=\u06a9\u0644
 you_can_not_select_organisation_units_below_the_selected_level=\u0622\u067e \u0645\u0646\u062a\u062e\u0628 \u06a9\u0631\u062f\u06c1 \u0633\u0637\u062d \u0633\u06d2 \u062a\u0646\u0638\u06cc\u0645 \u062a\u0646\u0638\u06cc\u0645\u0648\u06ba \u06a9\u0648 \u0645\u0646\u062a\u062e\u0628 \u0646\u06c1\u06cc\u06ba \u06a9\u0631\u0633\u06a9\u062a\u06d2 \u06c1\u06cc\u06ba
 you_do_not_have_access_to_all_items_in_this_favorite=\u0622\u067e \u06a9\u0648 \u0627\u0633 \u067e\u0633\u0646\u062f\u06cc\u062f\u06c1 \u0645\u06cc\u06ba \u062a\u0645\u0627\u0645 \u0627\u0634\u06cc\u0627\u0621 \u062a\u06a9 \u0631\u0633\u0627\u0626\u06cc \u0646\u06c1\u06cc\u06ba \u06c1\u06d2
