--- a/i18n/i18n_app_uk.properties
+++ b/i18n/i18n_app_uk.properties
@@ -168,7 +168,7 @@ overwrite=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u04
 overwrite_favorite=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u0438 \u0432\u0438\u0431\u0440\u0430\u043d\u0435
 page=\u0421\u0442\u043e\u0440\u0456\u043d\u043a\u0430
 parent_unit=Parent unit
-period=Period
+period=\u041f\u0435\u0440\u0456\u043e\u0434
 period_type=Period type
 phone_number=\u041d\u043e\u043c\u0435\u0440 \u0442\u0435\u043b\u0435\u0444\u043e\u043d\u0443
 placement=Placement
@@ -241,15 +241,15 @@ thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
-this_bimonth=This bi-month
+this_bimonth=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0434\u0432\u043e\u043c\u0456\u0441\u044f\u0447\u043d\u0438\u0439 \u043f\u0435\u0440\u0456\u043e\u0434
 this_financial_year=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0444\u0456\u043d\u0430\u043d\u0441\u043e\u0432\u0438\u0439 \u0440\u0456\u043a
-this_month=This month
-this_quarter=This quarter
-this_sixmonth=This six-month
-this_week=This week
+this_month=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u043c\u0456\u0441\u044f\u0446\u044c
+this_quarter=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u043a\u0432\u0430\u0440\u0442\u0430\u043b
+this_sixmonth=\u041f\u043e\u0442\u043e\u0447\u043d\u0435 \u043f\u0456\u0432\u0440\u0456\u0447\u0447\u044f
+this_week=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0442\u0438\u0436\u0434\u0435\u043d\u044c
 this_year=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0440\u0456\u043a
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=\u0421\u044c\u043e\u0433\u043e\u0434\u043d\u0456
 totals=\u041f\u0456\u0434\u0441\u0443\u043c\u043a\u0438
 update=\u041e\u043d\u043e\u0432\u0438\u0442\u0438
 username=\u0406\u043c'\u044f \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
@@ -258,7 +258,7 @@ user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=\u041e\u0434\u0438\u043d\u0438\u0446\u0456 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0456\u0432 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
 user_sub_x2_units=User sub-x2-units
-value=Value
+value=\u0417\u043d\u0430\u0447\u0435\u043d\u043d\u044f
 value_type=\u0422\u0438\u043f \u0437\u043d\u0430\u0447\u0435\u043d\u043d\u044f
 variance=\u041a\u043e\u043b\u0438\u0432\u0430\u043d\u043d\u044f (\u0432\u0430\u0440\u0456\u0430\u0442\u0438\u0432\u043d\u0456\u0441\u0442\u044c)
 version=\u0412\u0435\u0440\u0441\u0456\u044f
