8619071 chore(translations): sync Pushto translations from transifex (v32)

--- a/i18n/i18n_app_pt.properties
+++ b/i18n/i18n_app_pt.properties
@@ -130,7 +130,7 @@ low_size=Tamanho reduzido
 manage_favorites=Gerir favoritos
 map=Mapa
 max=Máx
-min=Min
+min=Mínimo
 min_max_c=Min/max Â°C
 min_max_elevation=Min/max elevação
 min_max_people=Min/max pessoas
