--- a/i18n/i18n_app_ps.properties
+++ b/i18n/i18n_app_ps.properties
@@ -92,21 +92,21 @@ infrastructural_data=\u0627\u0637\u0644\u0627\u0639\u0627\u062a \u0632\u06cc\u06
 invalid_parameter=\u0628\u0627\u0637\u0644\u06d0 \u0639\u0648\u0627\u0645\u0644
 item_type=\u062f \u0627\u0637\u0644\u0627\u0639\u0627\u062a \u0689\u0648\u0644
 landcover=\u062f \u0681\u0645\u06a9\u06d0 \u067e\u0648\u069a
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=\u062a\u06d0\u0631\u06d0 \u062f\u0648\u0647 \u0634\u067e\u0696 \u0645\u06cc\u0627\u0634\u062a\u06d0
 last_3_months=\u062a\u06d0\u0631\u06d0 3 \u0645\u06cc\u0627\u0634\u062a\u06d0
 last_4_quarters=\u062a\u06d0\u0631\u06d0 4\u0631\u0628\u0639\u06d0
 last_4_weeks=\u062a\u06d0\u0631\u06d0 4 \u0627\u0648\u0646\u06cd
 last_5_financial_years=\u062a\u06d0\u0631 5 \u0645\u0627\u0644\u064a \u06a9\u0644\u0648\u0646\u0647
-last_6_bimonths=Last 6 bi-months
-last_6_months=Last 6 months
+last_6_bimonths=\u067e\u0647 \u062a\u06d0\u0631\u0648 \u0634\u067e\u0696\u0648 \u0645\u06cc\u0627\u0634\u062a\u0648 \u06a9\u06d0 \u0689\u0648\u0647 \u0681\u0644\u06d0
+last_6_months=\u062a\u06d0\u0631\u06d0 \u0634\u067e\u0696 \u0645\u06cc\u0627\u0634\u062a\u06d0
 last_12_months=\u062a\u06d0\u0631\u06d0 12 \u0645\u06cc\u0627\u0634\u062a\u06d0
 last_12_weeks=\u062a\u06d0\u0631\u06d0 12 \u0627\u0648\u0646\u06cd
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
+last_52_weeks=\u062a\u06d0\u0631\u06d0 \u062f\u0648\u0647 \u067e\u0646\u0681\u0648\u0633 \u0627\u0648\u0646\u06cd
+last_bimonth=\u062a\u06d0\u0631\u06d0 \u062f\u0648\u0647 \u0645\u06cc\u0627\u0634\u062a\u06d0
 last_financial_year=\u062a\u06d0\u0631 \u0645\u0627\u0644\u064a \u06a9\u0627\u0644
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
+last_month=\u062a\u06d0\u0631\u0647 \u0645\u06cc\u0627\u0634\u062a
+last_quarter=\u062a\u06d0\u0631\u0647 \u0631\u0628\u0639\u0647
+last_sixmonth=\u062a\u06d0\u0631\u06d0 \u0634\u067e\u0696 \u0645\u06cc\u0627\u0634\u062a\u06d0 [ \u062a\u06d0\u0631\u06d0 \u0640 \u0634\u067e\u0696 \u0640 \u0645\u06cc\u0627\u0634\u062a\u06d0 ]
 last_week=\u062a\u06d0\u0631\u0647 \u0627\u0648\u0646\u06cd
 last_5_years=\u062a\u06d0\u0631 5 \u06a9\u0644\u0648\u0646\u0647
 last_year=\u062a\u06d0\u0631 \u06a9\u0627\u0644
@@ -271,7 +271,7 @@ write_interpretation=\u062a\u0641\u0633\u06cc\u0631 \u0648\u0644\u064a\u06a9\u06
 write_your_interpretation=\u062a\u0641\u0633\u06cc\u0631 \u0648 \u0634\u0631\u062d \u062e\u0648\u06cc\u0634 \u0631\u0627 \u062a\u062d\u0631\u06cc\u0631 \u0646\u0645\u0627\u0626\u06cc\u062f
 yearly=\u06a9\u0644\u0646\u06cd
 yes=\u0647\u0648 [ \u062f\u0631\u0633\u062a ]
-yesterday=Yesterday
+yesterday=\u067e\u0631\u0648\u0646\u06cd \u0648\u0631\u0681
 you_can_not_select_organisation_units_below_the_selected_level=\u062a\u0627\u0633\u0648 \u06a9\u0648\u0644\u06cc \u0646\u0634\u06cc \u0686\u06cc \u062a\u06cc\u062a\u06cc \u0645\u0631\u062d\u0644\u0647 \u062f \u0648\u0627\u062d\u062f \u0633\u0627\u0632\u0645\u0627\u0646 \u0627\u0646\u062a\u062e\u0627\u0628 \u06a9\u0693\u064a
 you_do_not_have_access_to_all_items_in_this_favorite=\u0634\u0645\u0627 \u062f\u0633\u062a\u0631\u0633\u06cc \u0628\u0647 \u062a\u0645\u0627\u0645 \u0645\u0648\u0636\u0648\u0639\u0627\u062a \u0628\u0647 \u0627\u06cc\u0646 \u0628\u062e\u0634 \u0645\u0648\u0631\u062f \u067e\u0633\u0646\u062f \u0646\u062f\u0627\u0631\u06cc\u062f
 
