049c2cf chore(translations): sync Burmese translations from transifex (v32)

--- a/i18n/i18n_app_my.properties
+++ b/i18n/i18n_app_my.properties
@@ -30,7 +30,7 @@ create=\u1016\u1014\u103a\u1010\u102e\u1038\u101e\u100a\u103a
 created_by=Created by
 current_legends=Current legends
 daily=\u1014\u1031\u1037\u1005\u1009\u103a
-data=Data
+data=\u1021\u1001\u103b\u1000\u103a\u1021\u101c\u1000\u103a
 data_and_periods=Data and periods
 dataelement=data element
 dataelement_group=data element \u1021\u102f\u1015\u103a\u1005\u102f
@@ -49,7 +49,7 @@ elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
 email=Email
-end_date=End date
+end_date=\u1015\u103c\u102e\u1038\u1006\u102f\u1036\u1038\u101e\u100a\u1037\u103a\u101b\u1000\u103a\u1005\u103d\u1032
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Equal intervals
@@ -75,7 +75,7 @@ google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
+greater_than=\u1011\u1000\u103a\u1000\u103c\u102e\u1038\u101e\u100a\u103a\u104b
 group=\u1021\u102f\u1015\u103a\u1005\u102f
 group_nearby_events=Group nearby events
 groups=Groups
@@ -86,30 +86,30 @@ highlight_color=Highlight color
 high_size=High size
 home=Home
 indicator=indicator
-indicator_group=Indicator group
+indicator_group=indicator \u1021\u102f\u1015\u103a\u1005\u102f
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
-last_4_quarters=Last 4 quarters
+last_2_sixmonths=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c(\u1042\u1000\u103c\u102d\u1019\u103a)
+last_3_months=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c
+last_4_quarters=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c\u1000
 last_4_weeks=Last 4 weeks
 last_5_financial_years=Last 5 financial years
-last_6_bimonths=Last 6 bi-months
+last_6_bimonths=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c(\u1042\u1000\u103c\u102d\u1019\u103a)
 last_6_months=Last 6 months
-last_12_months=Last 12 months
+last_12_months=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c
 last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
+last_bimonth=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c\u1000
 last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
+last_month=\u101a\u1001\u1004\u103a\u101c
+last_quarter=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1043\u101c\u1000
+last_sixmonth=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c\u1000
 last_week=Last week
-last_5_years=Last 5 years
-last_year=Last year
+last_5_years=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1045 \u1014\u103e\u1005\u103a
+last_year=\u101a\u1001\u1004\u103a\u1014\u103e\u1005\u103a
 latitude=Latitude
 layer=Layer
 layers=Layers
@@ -129,8 +129,8 @@ low_color_size=Low color / size
 low_size=Low size
 manage_favorites=favorites \u1005\u102e\u1005\u1009\u103a\u1015\u102b\u104b
 map=Map
-max=Max
-min=Min
+max=\u1021\u1019\u103b\u102c\u1038\u1006\u102f\u1036\u1038
+min=\u1021\u1014\u100a\u103a\u1038\u1006\u102f\u1036\u1038
 min_max_c=Min/max °C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
@@ -140,7 +140,7 @@ monthly=\u101c\u1005\u1009\u103a
 name=\u1021\u1019\u100a\u103a
 next=\u101b\u103e\u1031\u1037\u101e\u102d\u102f\u1037
 nighttime_lights=Nighttime lights
-no=No
+no=Nr
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
 none=\u1010\u1005\u103a\u1001\u102f\u1019\u103e\u1019\u101f\u102f\u1010\u103a
@@ -158,10 +158,10 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=Options
-organisation_unit=Organisation unit
+organisation_unit=\u1021\u1016\u103d\u1032\u1037\u1021\u1005\u100a\u103a\u1038\u101a\u1030\u1014\u1005\u103a
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
-organisation_units=Organisation units
+organisation_units=\u1021\u1016\u103d\u1032\u1037\u1021\u1005\u100a\u103a\u1038\u101a\u1030\u1014\u1005\u103a
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
@@ -169,7 +169,7 @@ overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
 period=\u1021\u1001\u103b\u102d\u1014\u103a\u1000\u102c\u101c
-period_type=Period type
+period_type=\u1000\u102c\u101c\u1021\u1019\u103b\u102d\u102f\u1038\u1021\u1005\u102c\u1038
 phone_number=Phone number
 placement=Placement
 please_create_map_first=Please create a map first
@@ -184,7 +184,7 @@ previous=\u1014\u1031\u102c\u1000\u103a\u101e\u102d\u102f\u1037
 program=Program
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Quarterly
+quarterly=\u101e\u102f\u1036\u1038\u101c\u1010\u1005\u103a\u1000\u103c\u102d\u1019\u103a
 relative=\u1006\u1000\u103a\u1005\u1015\u103a\u1019\u103e\u102f
 relocate=Relocate
 relocate_facility=Relocate facility
@@ -222,7 +222,7 @@ show_lon_lat=Show longitude/latitude
 sixmonthly=\u1001\u103c\u1031\u102c\u1000\u103a\u101c\u1010\u1005\u103a\u1000\u103c\u102d\u1019\u103a
 sixmonthly_april=Six-monthly April
 stage=Stage
-start_date=Start date
+start_date=\u1005\u1010\u1004\u103a\u101e\u100a\u1037\u103a\u101b\u1000\u103a\u1005\u103d\u1032
 start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Standard deviation
@@ -247,7 +247,7 @@ this_month=This month
 this_quarter=This quarter
 this_sixmonth=This six-month
 this_week=This week
-this_year=This year
+this_year=\u1012\u102e\u1014\u103e\u1005\u103a
 time_since_last_data_update=Elapsed time since last data update
 today=Today
 totals=Totals
