--- a/i18n/i18n_app_lo.properties
+++ b/i18n/i18n_app_lo.properties
@@ -12,9 +12,9 @@ average=\u0eaa\u0eb0\u0ec0\u0ea5\u0ec8\u0e8d
 bimonthly=\u0e97\u0eb8\u0e81\u0ec6\u0eaa\u0ead\u0e87\u0ec0\u0e94\u0eb7\u0ead\u0e99
 boundary_layer=\u0eaa\u0eb0\u0ec1\u0e94\u0e87\u0e82\u0ead\u0e9a\u0ec0\u0e82\u0e94
 by_data_element=\u0ec2\u0e94\u0e8d\u0ead\u0ebb\u0e87\u0e9b\u0eb0\u0e81\u0ead\u0e9a\u0e82\u0ead\u0e87\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99
-cancel=Cancel
-can_edit_and_view=Can edit and view
-can_view=Can view
+cancel=\u0e8d\u0ebb\u0e81\u0ec0\u0ea5\u0eb5\u0e81
+can_edit_and_view=\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0ec0\u0e9a\u0eb5\u0ec8\u0e87 \u0ec1\u0ea5\u0eb0 \u0ec1\u0e81\u0ec9\u0ec4\u0e82\u0ec4\u0e94\u0ec9
+can_view=\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0ec0\u0e9a\u0eb5\u0ec8\u0e87
 chart=\u0ec1\u0e9c\u0e99\u0ea7\u0eb2\u0e94
 classes_method=\u0e82\u0eb0\u0edc\u0eb2\u0e94\u0e82\u0ead\u0e87\u0eaa\u0eb5
 clear=\u0ea5\u0eb6\u0e9a
@@ -26,7 +26,7 @@ coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=\u0e99\u0eb1\u0e9a
-create=Create
+create=\u0eaa\u0ec9\u0eb2\u0e87
 created_by=\u0eaa\u0ec9\u0eb2\u0e87\u0ec2\u0e94\u0e8d
 current_legends=Current legends
 daily=\u0e97\u0eb8\u0e81\u0ec6\u0ea1\u0eb7\u0ec9
@@ -35,7 +35,7 @@ data_and_periods=\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99 \u0ec1\u0ea5\u0eb0 \u0ec0\
 dataelement=Data Element
 dataelement_group=\u0e81\u0ec8\u0eb8\u0ea1\u0e82\u0ead\u0ea5\u0ead\u0ebb\u0e87\u0e9b\u0eb0\u0e81\u0ead\u0e9a\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99
 dataset=\u0ec1\u0e9a\u0e9a\u0e9f\u0ead\u0ea1
-delete=Delete
+delete=\u0ea5\u0ebb\u0e9a
 delete_favorite=\u0ea5\u0ebb\u0e9a\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99\u0e97\u0eb5\u0ec8\u0ec4\u0e94\u0ec9\u0e9a\u0eb1\u0e99\u0e97\u0eb6\u0e81
 details=\u0ea5\u0eb2\u0e8d\u0ea5\u0eb0\u0ead\u0ebd\u0e94
 download=\u0e94\u0eb2\u0ea7\u0ec2\u0eab\u0ebc\u0e94
@@ -66,7 +66,7 @@ facility_layer_legend=Facility layer legend
 favorite_name=Favorite name
 favorite_outdated_create_new=Favorite is outdated - please create a new one
 favorites=\u0ec1\u0e9a\u0e9a\u0ea1\u0eb1\u0e81
-filter=Filter
+filter=\u0e81\u0eb1\u0ec8\u0e99\u0e95\u0ead\u0e87
 filter_by_value=\u0e81\u0eb1\u0e99\u0e95\u0ead\u0e87\u0ec2\u0e94\u0e8d\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99
 financial_april=\u0eaa\u0ebb\u0e81\u0e9b\u0eb5\u0e87\u0ebb\u0e9a\u0e9b\u0eb0\u0ea1\u0eb2\u0e99 (\u0ec0\u0ea5\u0eb5\u0ec8\u0ea1\u0ec1\u0e95\u0ec8\u0ec0\u0e94\u0eb7\u0ead\u0e99\u0ec0\u0ea1\u0eaa\u0eb2)
 financial_july=\u0eaa\u0ebb\u0e81\u0e9b\u0eb5\u0e87\u0ebb\u0e9a\u0e9b\u0eb0\u0ea1\u0eb2\u0e99 (\u0ec0\u0ea5\u0eb5\u0ec8\u0ea1\u0ec1\u0e95\u0ec8\u0ec0\u0e94\u0eb7\u0ead\u0e99\u0ea1\u0eb4\u0e96\u0eb8\u0e99\u0eb2)
@@ -97,16 +97,16 @@ last_3_months=3 \u0ec0\u0e94\u0eb7\u0ead\u0e99\u0e8d\u0ec9\u0ead\u0e99\u0eab\u0e
 last_4_quarters=4 \u0ec4\u0e95\u0ea1\u0eb2\u0e94\u0e8d\u0ec9\u0ead\u0e99\u0eab\u0ebc\u0eb1\u0e87
 last_4_weeks=4 \u0ead\u0eb2\u0e97\u0eb4\u0e94\u0e8d\u0ec9\u0ead\u0e99\u0eab\u0ebc\u0eb1\u0e87
 last_5_financial_years=\u200b\u0eaa\u0ebb\u0e81\u200b\u0e9b\u0eb4\u200b\u0e87\u0ebb\u0e9a\u200b\u0e9b\u0eb0\u200b\u0ea1\u0eb2\u0e99 5\u0e9b\u0eb5\u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0ea1\u0eb2
-last_6_bimonths=Last 6 bi-months
-last_6_months=Last 6 months
+last_6_bimonths=6 \u0e82\u0ead\u0e87\u0eaa\u0ead\u0e87\u0ec0\u0e94\u0eb7\u0ead\u0e99\u0eaa\u0eb8\u0e94\u0e97\u0ec9\u0eb2\u0e8d
+last_6_months=6 \u0ec0\u0e94\u0eb7\u0ead\u0e99\u0e9c\u0ec8\u0eb2\u0e99\u0ea1\u0eb2
 last_12_months=12 \u0ec0\u0e94\u0eb7\u0ead\u0e99\u0e8d\u0ec9\u0ead\u0e99\u0eab\u0ebc\u0eb1\u0e87
 last_12_weeks=12 \u0ead\u0eb2\u0e97\u0eb4\u0e94\u0e8d\u0ec9\u0ead\u0e99\u0eab\u0ebc\u0eb1\u0e87
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
+last_52_weeks=52 \u0ead\u0eb2\u0e97\u0eb4\u0e94\u0e9c\u0ec8\u0eb2\u0e99\u0ea1\u0eb2
+last_bimonth=\u0eaa\u0ead\u0e87\u0ec0\u0e94\u0eb7\u0ead\u0e99\u0e81\u0ec8\u0ead\u0e99\u0e97\u0ec9\u0eb2\u0e8d\u0e9b\u0eb5
 last_financial_year=\u200b\u0eaa\u0ebb\u0e81\u200b\u0e9b\u0eb5\u200b\u0e87\u0ebb\u0e9a\u200b\u0e9b\u0eb0\u200b\u0ea1\u0eb2\u0e99\u200b\u0e9b\u0eb5\u200b\u0e81\u0eb2\u0e8d
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
+last_month=\u0ec0\u0e94\u0eb7\u0ead\u0e99\u0e9c\u0ec8\u0eb2\u0e99\u0ea1\u0eb2
+last_quarter=\u0ec4\u0e95\u0ea1\u0eb2\u0e94\u0e9c\u0ec8\u0eb2\u0e99\u0ea1\u0eb2
+last_sixmonth=6 \u0ec0\u0e94\u0eb7\u0ead\u0e99\u0e9c\u0ec8\u0eb2\u0e99\u0ea1\u0eb2
 last_week=\u0ead\u0eb2\u0e97\u0eb4\u0e94\u0e97\u0eb5\u0ec8\u0e9c\u0ec8\u0eb2\u0e99\u0ea1\u0eb2
 last_5_years=5 \u0e9b\u0eb5\u0e8d\u0ec9\u0ead\u0e99\u0eab\u0ebc\u0eb1\u0e87
 last_year=\u0e9b\u0eb5\u0e81\u0eb2\u0e8d
@@ -140,7 +140,7 @@ monthly=\u0ea5\u0eb2\u0e8d\u0ec0\u0e94\u0eb7\u0ead\u0e99
 name=\u0e8a\u0eb7\u0ec8
 next=\u0e95\u0ecd\u0ec8\u0ec4\u0e9b
 nighttime_lights=Nighttime lights
-no=No
+no=\u0e9a\u0ecd\u0ec8
 no_groupset_selected=No group set selected
 no_map_to_save=\u0e9a\u0ecd\u0ec8\u0ea1\u0eb5\u0ec1\u0e9c\u0e99\u0e97\u0eb5\u0ec8\u0ec3\u0eab\u0ec9\u0e9a\u0eb1\u0e99\u0e97\u0eb6\u0e81
 none=\u0e9a\u0ecd\u0ec8\u0ea1\u0eb5
@@ -160,7 +160,7 @@ open_this_map_as_table=\u0ec0\u0ead\u0ebb\u0eb2\u0ec1\u0e9c\u0e99\u0e97\u0eb5\u0
 options=\u0e88\u0eb1\u0e94\u0e81\u0eb2\u0e99
 organisation_unit=\u200b\u0eab\u0ebb\u0ea7\u200b\u0edc\u0ec8\u0ea7\u0e8d\u200b\u0e81\u0eb2\u0e99\u200b\u0e88\u0eb1\u0e94\u200b\u0e95\u0eb1\u0ec9\u0e87
 organisation_unit_group_icons=\u0eaa\u0eb1\u0e99\u0e8d\u0eb2\u0ea5\u0eb1\u0e81\u0e81\u0eb8\u0ec8\u0ea1\u0ec2\u0e84\u0e87\u0eae\u0ec8\u0eb2\u0e87\u0e81\u0eb2\u0e99\u0e88\u0eb1\u0e94\u0e95\u0eb1\u0ec9\u0e87
-organisationunit_groupset=Organisation unit group set
+organisationunit_groupset=\u0e81\u0eb8\u0ec8\u0ea1\u0ec2\u0e84\u0e87\u0eae\u0ec8\u0eb2\u0e87\u0e81\u0eb2\u0e99\u0e88\u0eb1\u0e94\u0e95\u0eb1\u0ec9\u0e87
 organisation_units=\u0ec2\u0e84\u0e87\u0eae\u0ec8\u0eb2\u0e87\u0e81\u0eb2\u0e99\u0e88\u0eb1\u0e94\u0e95\u0eb1\u0ec9\u0e87
 organisationunit_search=\u0e84\u0ebb\u0ec9\u0e99\u0eab\u0eb2\u0ec2\u0e84\u0e87\u0eae\u0ec8\u0eb2\u0e87\u0e81\u0eb2\u0e99\u0e88\u0eb1\u0e94\u0e95\u0eb1\u0ec9\u0e87
 osm_light=\u0ec1\u0e9c\u0e99\u0e97\u0eb5\u0ec8\u0ec1\u0e9a\u0e9a OSM
@@ -180,12 +180,12 @@ point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
 predefined=\u0ec1\u0e9a\u0e9a\u0ec0\u0ea5\u0eb7\u0ead\u0e81
-previous=Previous
-program=Program
+previous=\u0e8d\u0ec9\u0ead\u0e99\u0e81\u0eb1\u0e9a
+program=\u0eaa\u0eb2\u0e8d\u0e87\u0eb2\u0e99
 program_indicators=\u0e95\u0ebb\u0ea7\u0e8a\u0eb5\u0ec9\u0ea7\u0eb1\u0e94\u0eaa\u0eb0\u0ec0\u0e9e\u0eb2\u0eb0\u0ea7\u0ebd\u0e81\u0e82\u0ead\u0e87\u0e82\u0eb0\u0ec1\u0edc\u0e87
 public_access=\u0e84\u0ebb\u0e99\u0ead\u0eb7\u0ec8\u0e99\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u0ec0\u0e96\u0eb4\u0e87\u0ec4\u0e94\u0ec9
 quarterly=\u0ec4\u0e95\u0ea1\u0eb2\u0e94
-relative=Relative
+relative=\u0e8a\u0ec8\u0ea7\u0e87\u0ec0\u0ea7\u0ea5\u0eb2\u0eaa\u0eb3\u0e9e\u0eb1\u0e99\u0ead\u0eb7\u0ec8\u0e99\u0ec6
 relocate=Relocate
 relocate_facility=Relocate facility
 remove=\u0ea5\u0ebb\u0e9a\u0ead\u0ead\u0e81
@@ -214,13 +214,13 @@ select_year=Select year
 service_url=Service URL
 share=\u0ec1\u0e88\u0e81
 share_with_other_people=\u0ec1\u0e9a\u0ec8\u0e87\u0e9b\u0eb1\u0e99\u0e81\u0eb1\u0e9a\u0e84\u0ebb\u0e99\u0ead\u0eb7\u0ec8\u0e99
-sharing_settings=Sharing settings
+sharing_settings=\u0e95\u0eb1\u0ec9\u0e87\u0e84\u0ec8\u0eb2\u0e81\u0eb2\u0e99 share
 show=\u0eaa\u0eb0\u0ec1\u0e94\u0e87
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=\u0eaa\u0eb0\u0ec1\u0e94\u0e87\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99
 show_lon_lat=Show longitude/latitude
 sixmonthly=\u0ec1\u0e95\u0ec8\u0ea5\u0eb0 6 \u0ec0\u0e94\u0eb7\u0ead\u0e99
-sixmonthly_april=Six-monthly April
+sixmonthly_april=\u0ec1\u0e95\u0ec8\u0ea5\u0eb0\u0eab\u0ebb\u0e81\u0ec0\u0e94\u0eb7\u0ead\u0e99 \u0ec1\u0ea5\u0eb0 \u0ec0\u0e94\u0eb7\u0ead\u0e99\u0ec0\u0ea1\u0eaa\u0eb2
 stage=\u0e8d\u0eb0\u0eab\u0ea7\u0ec8\u0eb2\u0e87
 start_date=\u0ea7\u0eb1\u0e99\u0e97\u0eb5\u0ec0\u0ea5\u0eb5\u0ec8\u0ea1\u0e95\u0ebb\u0ec9\u0e99
 start_end_dates=\u0ea7\u0eb1\u0e99\u0ec0\u0ea5\u0eb5\u0ec9\u0ea1\u0e95\u0ebb\u0ec9\u0e99/\u0ea7\u0eb1\u0e99\u0eaa\u0eb4\u0ec9\u0e99\u0eaa\u0eb8\u0e94
@@ -251,16 +251,16 @@ this_year=\u0e9b\u0eb5\u0e99\u0eb5\u0ec9
 time_since_last_data_update=Elapsed time since last data update
 today=\u0ea1\u0eb7\u0ec9\u0e99\u0eb5\u0ec9
 totals=\u0ea5\u0ea7\u0ea1\u0e97\u0eb1\u0e87\u0edd\u0ebb\u0e94
-update=Update
+update=\u0e9b\u0eb1\u0e9a\u0e9b\u0eb8\u0e87
 username=\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0e9b\u0eb0\u0ec0\u0e97\u0e94
 user_sub_units=\u0eab\u0ebb\u0ea7\u0edc\u0ec8\u0ea7\u0e8d\u0e8d\u0ec8\u0ead\u0e8d\u0e82\u0ead\u0e87\u0e97\u0ec8\u0eb2\u0e99
 user_sub_x2_units=\u0eab\u0ebb\u0ea7\u0edc\u0ec8\u0ea7\u0e8d\u0e8d\u0ec8\u0ead\u0e8d\u0e82\u0eb1\u0ec9\u0e99\u0eaa\u0ead\u0e87\u0e82\u0ead\u0e87\u0e97\u0ec8\u0eb2\u0e99
-value=Value
+value=\u0e84\u0ec8\u0eb2
 value_type=Value Type
-variance=Variance
+variance=\u0e84\u0ea7\u0eb2\u0ea1\u0ec1\u0e95\u0e81\u0e95\u0ec8\u0eb2\u0e87
 version=\u0ea5\u0eb9\u0ec9\u0e99
 weekly=\u0ec0\u0e9b\u0eb1\u0e99\u0ead\u0eb2\u0e97\u0eb4\u0e94
 weekly_wednesday=Weekly (Start Wednesday)
@@ -270,8 +270,8 @@ weekly_sunday=Weekly (Start Sunday)
 write_interpretation=\u0e82\u0ebd\u0e99\u0e84\u0ea7\u0eb2\u0ea1\u0edd\u0eb2\u0e8d
 write_your_interpretation=Write your interpretation
 yearly=\u0ea5\u0eb2\u0e8d\u0e9b\u0eb5
-yes=Yes
-yesterday=Yesterday
+yes=\u0ec1\u0ea1\u0ec8\u0e99
+yesterday=\u0ea1\u0eb7\u0ec9\u0ea7\u0eb2\u0e99\u0e99\u0eb5
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=\u0e97\u0ec8\u0eb2\u0e99\u0e9a\u0ecd\u0ec8\u0ec4\u0e94\u0ec9\u0eae\u0eb1\u0e9a\u0ead\u0eb0\u0e99\u0eb8\u0e8d\u0eb2\u0e94\u0e97\u0eb5\u0ec8\u0e88\u0eb0\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0ea5\u0eb2\u0e8d\u0e81\u0eb2\u0e99\u0e97\u0eb5\u0ec8\u0e9a\u0eb1\u0e99\u0e97\u0eb6\u0e81\u0ec4\u0ea7\u0ec9\u0e97\u0eb1\u0e87\u0edd\u0ebb\u0e94\u0ec4\u0e94\u0ec9
 
