c73c9fc chore(translations): sync French translations from transifex (v32)

--- a/i18n/i18n_app_fr.properties
+++ b/i18n/i18n_app_fr.properties
@@ -182,7 +182,7 @@ precipitation=Précipitation
 predefined=Prédéfini
 previous=Précédent
 program=Programme
-program_indicators=Program indicators
+program_indicators=Indicateurs de programme
 public_access=Accès public
 quarterly=Trimestriel
 relative=Relatif
